2003-01-17  Fabio Alemagna  <falemagn@aros.org>

	* readelf.c (get_osabi_name): Handle ELFOSABI_AROS, ELFOSABI_OPENVMS
	and ELFOSABI_NSK.

2003-01-16  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c: Include elf/ppc64.h.
	(dump_relocations <EM_PPC64>): Use elf_ppc64_reloc_type.
	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2003-01-02  Ben Elliston  <bje@redhat.com>

	* readelf.c (guess_is_rela): Handle EM_IQ2000.
	(get_machine_name): Likewise.
	(dump_relocations): Likewise.
	* NEWS: Mention IQ2000 support.

2003-01-02  Richard Sandiford  <rsandifo@redhat.com>

	* readelf.c (get_machine_flags): Handle E_MIPS_ARCH_32R2.

2002-12-30  Chris Demetriou  <cgd@broadcom.com>

	* doc/binutils.texi (objdump): Note MIPS HWR (Hardware Register)
	changes in MIPS -M options.

2002-12-30    Dmitry Diky <diwil@mail.ru>

	* Makefile.am: Add msp430 target.
	* Makefile.in: Regenerate.
	* readelf.c: Add support for msp430 target.

2002-12-27  Chris Demetriou  <cgd@broadcom.com>

	* doc/binutils.texi (objdump): Document MIPS -M options.

2002-12-23  Andreas Schwab  <schwab@suse.de>

	* readelf.c (main): Reset dump request after each file.

2002-12-23  Nick Clifton  <nickc@redhat.com>

	* nlmconv.c (main): Pass TRUE as third argument to
	bfd_arch_get_compatible.

2002-12-23  Nick Clifton  <nickc@redhat.com>

	* strings.c (isgraphic): Replace definition with STRING_ISGRAPHIC
	macro.  Handle 'S' encoding, accepting 8-bit characters.
	(main): Parse 'S' encoding.
	(get_char): Accept 'S' encoding.
	(print_strings): Use STRING_ISGRAPHIC.
	(usage): Document support of 'S' encoding.
	* doc/binutils.texi: Document support of 'S' encoding/
	* NEWS: Mention new feature.

2002-12-20  Alan Modra  <amodra@bigpond.net.au>

	* README <building ar>: Don't use libibery's needed_list or
	required_list, instead link libiberty/*.o.

2002-12-19  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/binutils.texi: Fix typos.

2002-12-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>
