@@ -1,3 +1,7 @@
+2003-01-21  Daniel Berlin  <dan@dberlin.org>
+
+	* readelf.c (display_debug_loc): Skip address base changes.
+
 2003-01-17  Fabio Alemagna  <falemagn@aros.org>
 
 	* readelf.c (get_osabi_name): Handle ELFOSABI_AROS, ELFOSABI_OPENVMS
